--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "simple-di",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "start": "npm run build && node ./dist/test.app.js",
     "build": "tsc"
   },
   "author": "Fernando Asulay",
   "license": "ISC",
+  "files": ["dist/**/*"],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/desertmark/simple-di.git"
+  },
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.13",
