--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.13",
-    "express": "^4.17.1",
     "typescript": "^3.9.5"
   },
   "dependencies": {
+    "express": "~4.17.1",
     "reflect-metadata": "^0.1.13"
   }
 }
